--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,10 @@
     <title>{% block title %}Virtual Office{% endblock %}</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/windows.css' %}">
+    <link rel="stylesheet" href="{% static 'css/desktop.css' %}">
+
 
 </head>
 <body>
