--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}{% load static %}
+{% extends "base.html" %}
+{% load static %}
 {% block title %}Bureau - Virtual Office{% endblock %}
 {% block content %}
 <div id="desktop">
-  <!-- Icônes du bureau (positionnées par un grid, pouvant être enregistrées pour l'utilisateur) -->
   <div class="desktop-icons">
     <div class="desktop-icon" data-app="terminal">
       <img src="{% static 'images/terminal.png' %}" alt="Terminal">
@@ -13,27 +13,14 @@
       <span>Explorer</span>
     </div>
   </div>
-  <!-- Conteneur pour les fenêtres -->
   <div id="windows-container"></div>
-  <!-- Barre des tâches -->
   <div id="taskbar">
     <div id="start-button">
-      <i class="fa-solid fa-bars"></i> <span>Menu</span>
+      <i class="fa-solid fa-bars"></i>
     </div>
     <div id="taskbar-icons"></div>
-    <div id="task-manager-button" title="Task Manager">
-      <i class="fa-solid fa-tasks"></i>
-    </div>
+    <!-- L'icône Task Manager a été supprimée -->
   </div>
-  <!-- Task Manager Panel -->
-  <div id="task-manager" class="hidden">
-    <div class="task-manager-header">
-      <span>Gestionnaire des Tâches</span>
-      <button id="close-task-manager"><i class="fa-solid fa-xmark"></i></button>
-    </div>
-    <div id="task-list"></div>
-  </div>
-  <!-- Start Menu – Glassmorphic -->
   <div id="start-menu" class="hidden">
     <div class="start-menu-content">
       <div class="start-menu-header">
